# RedmineMCP

./: .dockerignore  .gitignore  .gitlab-ci.yml  .replit  BOOTSTRAP_SUMMARY.md  CHANGES.md  CLAUDE_REDMINE_INSTRUCTIONS.md  CONTRIBUTING.md  DEVELOPER-GUIDE.md  DEVELOPER_DIARY.md  DOCUMENTATION.md  Dockerfile  Dockerfile.redmine  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  MCP_INTEGRATION_GUIDE.md  NEXT_STEPS.md  PROCESS.md  PROJECT_STRUCTURE.md  README.md  REDMINE_API_GUIDE.md  REDMINE_API_NOTES.md  REDMINE_WORKFLOW_GUIDE.md  SECURITY.md  SUMMARY.md  TODO.md  TROUBLESHOOTING.md  app.py  build-mcp.sh  check_config.py  check_containers.py  claude-desktop-mcp-sample.json  config.py  create-redmine-project.sh  create_project.py  create_wiki.sh  credentials.yaml.example  desktop_config.json  docker-compose.dev.yml  docker-compose.local.yml  (+46 more)
.github/: README.md
01_research/: mcp_research_summary.md  redmine_architecture.md
02_requirements/: requirements_specification.md
03_design/: architecture_diagram.md
04_process/: implementation_roadmap.md  project_plan.md
attached_assets/: Pasted--Search-logs-1s-30s-0s-0s-3s-Run-python-m-pip-install-upgrade-pip-python-m-pip-install-upgra-1743196613893.txt  Pasted-Digest-sha256-ab00561931762207af3252b0d732939eac021fd0926a09e702a6b7fdc344cf88-Status-Downloaded-n-1743212745132.txt
config/: config.yml  puma.rb
docs/: CODE_OF_CONDUCT.md  CREDENTIALS_README.md  DEV_ENVIRONMENT.md  README.md  REDMINE_MCP_SETUP.md  REDMINE_SETUP.md  STATUS_REPORT.md  api_testing_reference.md  basic-usage.md  coding-standards.md  migration_summary.md  (+14 more)
(+268 files in other folders)
