[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redmine-mcp-extension"
version = "0.1.0"
description = "A Model Context Protocol extension for Redmine that leverages AI to streamline issue management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Redmine MCP Team"}
]
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "sqlalchemy",
    "requests",
    "gunicorn",
    "pyyaml",
    "pytest",
    "responses",
    "psycopg2-binary",
    "tomli>=2.2.1",
    "setuptools>=78.1.0",
]

[tool.setuptools.packages.find]
exclude = ["static*", "templates*", "scripts*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
]
